--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.10.1",
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
