--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.1",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
+    "lodash.merge": "^4.6.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
   },
