--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-validator": "^6.15.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "lodash.merge": "^4.6.2",
     "morgan": "^1.10.0",
